2004-08-25 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_trace.cc, src/14bit-registers.cc, src/trace.cc,
	  src/trace.h: Removed a stale option to the trace command
	and added a new option that will allow the decode trace
	buffer to be saved to a file.

2004-08-25 Manuel Bouyer <bouyer@antioche.eu.org>
	* src/stimuli.cc: fixed bug in finding the node voltage when
	3 or more stimuli are attached to a node.

2004-08-24 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: Attaching three or more stimuli to
	one node caused gpsim to hang.

2004-08-24 Manuel Bouyer <bouyer@antioche.eu.org>
	* src/stimuli.cc: Fixed iopin stimulus update. 

2004-08-24 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_attach.cc, cli/cmd_attach.h, cli/cmd_symbol.cc,
	  cli/cmd_symbol.h, cli/expr.cc, cli/expr.h, cli/parse.yy,
	  cli/scan.ll, src/stimuli.cc, src/stimuli.h, src/symbol.h:
	The attach command can now accept a list of symbols. Also,
	Nodes and stimuli are now added to the symbol table whenever
	they're constructed.

2004-08-19 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: writeTT and readTT were not initialized
	in Processor constructor.

2004-08-18 Scott Dattalo <scott@dattalo.com>
	* src/registers.cc, src/registers.h, src/symbol.cc,
	  src/symbol.h, src/trace.cc, src/trace.h, cli/cmd_symbol.cc,
	  cli/cmd_symbol.h, cli/expr.cc, cli/expr.h, cli/parse.yy,
	  cli/scan.ll:
	More improvements to tracing.
	Added some more symbolic command line processing.


2004-08-16 Scott Dattalo <scott@dattalo.com>
	* src/trace.cc, src/trace.h:
	CVS was broken.

2004-08-16 Scott Dattalo <scott@dattalo.com>
	* src/intcon.cc, src/intcon.h, src/processor.h, src/trace.cc
	src/trace.h, src/value.h:
	Trace stuff *** CVS is broken at the moment but will be fixed
	within 3 hours of the time stamp of this change

2004-08-14 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: small changes
	* doc/gpsimWin32.html: documented GCC compilation

2004-08-13 Scott Dattalo <scott@dattalo.com>